Closed Bug 904214 Opened 11 years ago Closed 11 years ago

[MP] Defect - Metro browser launch fails on Atom tablets

Categories

(Firefox for Metro Graveyard :: General, defect, P1)

26 Branch
x86_64
Windows 8.1
defect

Tracking

(Not tracked)

VERIFIED FIXED
Firefox 26

People

(Reporter: Samvedana, Assigned: jimm)

References

Details

(Whiteboard: [preview] feature=defect c=Opening_and_closing u=metro_firefox_user p=2)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.2; Win64; x64; rv:26.0) Gecko/20100101 Firefox/26.0
Build ID: 20130812030209
Built from http://hg.mozilla.org/mozilla-central/rev/87c1796bc46c


STR
open metro Firefox in Acer atom tablet.

Expected result:
Metro Firefox should open.

Actual result:
Metro Firefox didn't open.
Whiteboard: [preview-triage] feature=defect c=Opening_and_closing u=metro_firefox_user p=0
Blocks: metrov1backlog
No longer blocks: metrov1defect&change
Is this constant (the browser will not launch) or a sporadic problem?
I have what seems to be the same issue on my Dell Latitude 10. 
If I launch Nightly from the start screen, I see the splash briefly and then it dumps back to the start screen. If I swipe from the left, I can see that Nightly splash screen, but it never finishes starting up before dumping back to the windows start screen.
(In reply to Sam Foster [:sfoster] from comment #2)
> I have what seems to be the same issue on my Dell Latitude 10. 
> If I launch Nightly from the start screen, I see the splash briefly and then
> it dumps back to the start screen. If I swipe from the left, I can see that
> Nightly splash screen, but it never finishes starting up before dumping back
> to the windows start screen.

How often does this happen?
Same issue on my Iconia W5 with an Atom processor.
(In reply to Jim Mathies [:jimm] from comment #3)
> (In reply to Sam Foster [:sfoster] from comment #2)
> > I have what seems to be the same issue on my Dell Latitude 10. 
> > If I launch Nightly from the start screen, I see the splash briefly and then
> > it dumps back to the start screen. If I swipe from the left, I can see that
> > Nightly splash screen, but it never finishes starting up before dumping back
> > to the windows start screen.
> 
> How often does this happen?

I was using nightly last week just fine on this tablet. I first noticed over the weekend. Its happens every time.
(In reply to Sam Foster [:sfoster] from comment #5)
> (In reply to Jim Mathies [:jimm] from comment #3)
> > (In reply to Sam Foster [:sfoster] from comment #2)
> > > I have what seems to be the same issue on my Dell Latitude 10. 
> > > If I launch Nightly from the start screen, I see the splash briefly and then
> > > it dumps back to the start screen. If I swipe from the left, I can see that
> > > Nightly splash screen, but it never finishes starting up before dumping back
> > > to the windows start screen.
> > 
> > How often does this happen?
> 
> I was using nightly last week just fine on this tablet. I first noticed over
> the weekend. Its happens every time.

Sounds like something gfx, can you get a debugger attached and stack of the crash? There's an defined delay in browser app for this:

http://mxr.mozilla.org/mozilla-central/source/browser/app/nsBrowserApp.cpp#34

It'd be interesting to know if the exe actually gets to main, or if there's something wrong with app launch config.
Samvedana, any chance you might be able to work up a regression range?
Flags: needinfo?(samvedana.gohil)
Whiteboard: [preview-triage] feature=defect c=Opening_and_closing u=metro_firefox_user p=0 → [preview] feature=defect c=Opening_and_closing u=metro_firefox_user p=0
Summary: Defect - Acer atom tablet fail to startup in Metro mode → [MP] Defect - Acer atom tablet fail to startup in Metro mode
(In reply to Jim Mathies [:jimm] from comment #1)
> Is this constant (the browser will not launch) or a sporadic problem?

This is constant, the Metro Firefox browser didn't launch ( opened and closed instantly. I was just able to see blue screen which we generally see when metro launches)
Flags: needinfo?(samvedana.gohil)
(In reply to Jim Mathies [:jimm] from comment #7)
> Samvedana, any chance you might be able to work up a regression range?

I will provide regression window ASAP
Good
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0
Build ID: 20130809030203
Built from  http://hg.mozilla.org/mozilla-central/rev/e33c2011643e

Bad
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0
Build ID: 20130810030206
Built from http://hg.mozilla.org/mozilla-central/rev/c5946a8bcd5b
Thanks!
Blocks: 905032
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0
Build ID: 20130816030205
Built from http://hg.mozilla.org/mozilla-central/rev/1ed5a88cd4d0

Tested on windows 8 using latest nightly for iteration-12. Metro Firefox still crashes frequently on acer atom tablet.
(In reply to Samvedana (:Samvedana) from comment #13)
> User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:26.0) Gecko/20100101
> Firefox/26.0
> Build ID: 20130816030205
> Built from http://hg.mozilla.org/mozilla-central/rev/1ed5a88cd4d0
> 
> Tested on windows 8 using latest nightly for iteration-12. Metro Firefox
> still crashes frequently on acer atom tablet.

I'm guessing these devices don't use the D2D backend. Maybe we can reproduce this on other tablets by disabling D2D, per Samvedana's comment in bug 870390.
Milan, curious what the time frame is for getting omtc going on desktop? Once we turn omtc on there our non-accelerated test runs will cover this code, but until then we don't have any test coverage for disabled d2d w/omtc. We can rely on manual testing or as a temporary measure get mochitest-metro-chrome going with d2d disabled (bug 882333). Curious what the gfx team thinks? If we're going to have omtc for Windows desktop soonish, we can probably wait for that.
Flags: needinfo?(milan)
Summary: [MP] Defect - Acer atom tablet fail to startup in Metro mode → [MP] Defect - Metro browser launch fails on Atom tablets
I think you're asking when we'll close bug 899785 / bug 756606? :bas and I were just going to catch up with :nrc on that, but maybe we can do it in this bug.
Flags: needinfo?(milan) → needinfo?(ncameron)
(In reply to Milan Sreckovic [:milan] from comment #18)
> I think you're asking when we'll close bug 899785 / bug 756606? :bas and I
> were just going to catch up with :nrc on that, but maybe we can do it in
> this bug.

At this stage we are very close to turning on Windows OMTC, I basically just have to investigate a handful of failing reftests (fuzz, probably). But, every time I fix something I find something else that needs fixing and doesn't have tests :-( So I guess maybe turned on next week. However, even then it will be only on nightly and I'll turn it off for Aurora because we need to not regress video (DXVA work with cpearce).
Flags: needinfo?(ncameron)
Attached file crash stack
Looks like it's failing right here - 

http://hg.mozilla.org/mozilla-central/annotate/d136c8999d96/gfx/layers/d3d11/CompositorD3D11.cpp#l224

which points to the component alpha landings in bug 901722.

I'm debugging a nightly so i don't have hresults, I'll try to get a local build going on this little asus and debug some more.
No longer blocks: 905032
(In reply to Jim Mathies [:jimm] from comment #21)
> Looks like it's failing right here - 
> 
> http://hg.mozilla.org/mozilla-central/annotate/d136c8999d96/gfx/layers/d3d11/
> CompositorD3D11.cpp#l224
> 
> which points to the component alpha landings in bug 901722.
> 
> I'm debugging a nightly so i don't have hresults, I'll try to get a local
> build going on this little asus and debug some more.

Sorry got derailed on another issue - the failure code here is 0x80070057, "The parameter is incorrect."
Blocks: 901722
No longer blocks: 844954
This solves the problem for metro users so they can get up and running again. It doesn't try to address the failure in CreateBlendState. I'd like to land this a file a follow up on the desktop / atom issue.
Assignee: nobody → jmathies
Attachment #793998 - Flags: review?(ncameron)
Hey Jim, can you provide a point value for this defect.
Blocks: metrov1it13
No longer blocks: metrov1backlog
Status: NEW → ASSIGNED
Flags: needinfo?(jmathies)
QA Contact: jbecerra
Comment on attachment 793998 [details] [diff] [review]
paveover for metro

Review of attachment 793998 [details] [diff] [review]:
-----------------------------------------------------------------

There is one use of mComponentBlendState in DrawQuad, we already assert the pref, but I would be happier to assert that mComponentBlendState is non-null too because it is better 'documentation'. r=me with the assert.
Attachment #793998 - Flags: review?(ncameron) → review+
(In reply to Nick Cameron [:nrc] from comment #26)
> Comment on attachment 793998 [details] [diff] [review]
> paveover for metro
> 
> Review of attachment 793998 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> There is one use of mComponentBlendState in DrawQuad, we already assert the
> pref, but I would be happier to assert that mComponentBlendState is non-null
> too because it is better 'documentation'. r=me with the assert.

Updated, thanks!
Flags: needinfo?(jmathies)
Whiteboard: [preview] feature=defect c=Opening_and_closing u=metro_firefox_user p=0 → [preview] feature=defect c=Opening_and_closing u=metro_firefox_user p=2
two landings, I had the assert addition on my tablet but didn't get it into my first push.

https://hg.mozilla.org/integration/mozilla-inbound/rev/b4b8ecfae683
https://hg.mozilla.org/integration/mozilla-inbound/rev/dec0efbf0e55
https://hg.mozilla.org/mozilla-central/rev/b4b8ecfae683
https://hg.mozilla.org/mozilla-central/rev/dec0efbf0e55
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 26
\o/
Atom users can update via desktop. Please confirm this addresses startup problems, it's working well on my atom asus.
Status: RESOLVED → VERIFIED
Working for me on samsung ativ 500t atom
Yes all working great here now on Latitude 10 tablet with Atom Z2760 via the trunk version - amazingly fast fix guys! :-)

Sync is proving tricky to get working on Metro version - any tips for that?

Thanks again
Atom-based Dell Latitude 10 also working well so far here.
Sorry to ask here but I couldn't find a way to force the metro version to use the master password when I had set up Sync with my other Firefox installs - all passwords were available despite not having entered my master password on this device which is why I didn't want to use Chrome!
(In reply to aasymonds from comment #35)
> Sorry to ask here but I couldn't find a way to force the metro version to
> use the master password when I had set up Sync with my other Firefox
> installs - all passwords were available despite not having entered my master
> password on this device which is why I didn't want to use Chrome!

We had Master Password support in an earlier version, but there were some critical bugs that we didn't have time to fix for our initial release, so it has been removed for now (bug 853391).

I hope to restore it in a future version as soon as we have time to get it working properly.
Priority: -- → P1
OS: Windows 8 Metro → Windows 8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: