Bug 904214 - Don't initialize component alpha blend state if its not in use. r=nrc